salesforce_sfdx/main/default/objects/Case/fields/Case_URL__c.field-meta.xml
<CustomField>
    <fullName>Case_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_360, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_360))&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case URL</label>
    <type>Text</type>
</CustomField>