salesforce_sfdx/main/default/objects/Case/fields/Orchestration_Item__c.field-meta.xml
<CustomField>
    <fullName>Orchestration_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Failed orchestration item</inlineHelpText>
    <label>Orchestration Item</label>
    <referenceTo>%vlocity_namespace%__OrchestrationItem__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>