salesforce_sfdx/main/default/objects/Case/fields/Orchestration_Plan__c.field-meta.xml
<CustomField>
    <fullName>Orchestration_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Failed orchestration plan</inlineHelpText>
    <label>Orchestration Plan</label>
    <referenceTo>%vlocity_namespace%__OrchestrationPlan__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>